UPDATE: Fixed import paths. Added README file

--- a/html/brandsList.html
+++ b/html/brandsList.html
@@ -8,13 +8,13 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/_utilities.css">
-    <link rel="stylesheet" href="/www/css/Brands.css">
+    <link rel="stylesheet" href="./css/_utilities.css">
+    <link rel="stylesheet" href="./css/Brands.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -657,6 +657,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/www/js/Index.js"></script>
+    <script src="./js/Index.js"></script>
 </body>
 </html>
