--- a/html/indexForChildren.html
+++ b/html/indexForChildren.html
@@ -8,20 +8,20 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/_utilities.css">
-    <link rel="stylesheet" href="/www/css/IndexForChildren.css">
+    <link rel="stylesheet" href="./css/_utilities.css">
+    <link rel="stylesheet" href="./css/IndexForChildren.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <main id="main" class="justify-content-around">
         <nav class="pointer " aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="IndexForChildren.html">Главная</a></li>
+              <li class="breadcrumb-item"><a href="indexForChildren.html">Главная</a></li>
               <li class="breadcrumb-item"><a href="">New-In</a></li>
             </ol>
         </nav>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/www/source/img/forChildren/image1.png" alt="">
+                <img src="./source/img/forChildren/image1.png" alt="">
             </div>
         </div>
         <div class="cards-list-wrapper">
@@ -55,7 +55,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forChildren/prodImg1.png" alt="">
+                            <img src="./source/img/forChildren/prodImg1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -67,7 +67,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forChildren/prodImg2.png" alt="">
+                            <img src="./source/img/forChildren/prodImg2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -79,7 +79,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forChildren/prodImg3.png" alt="">
+                            <img src="./source/img/forChildren/prodImg3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -92,7 +92,7 @@
         </div>
         <div class="presentation-wrapper d-flex flex-row justify-content-around">
             <div class="img-wrapper">
-                <img src="/www/source/img/forChildren/image2.png" alt="">
+                <img src="./source/img/forChildren/image2.png" alt="">
             </div>
             <div class="presentation d-flex justify-content-center flex-wrap">
                 <div class="wrapper d-flex flex-column justify-content-center">
@@ -118,6 +118,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/www/js/Index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
