--- a/html/prodList.html
+++ b/html/prodList.html
@@ -8,19 +8,19 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/_utilities.css">
+    <link rel="stylesheet" href="./css/_utilities.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <main id="main" class="justify-content-around">
         <nav class="pointer " aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="Index.html">Главная</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
               <li class="breadcrumb-item"><a href="">New-In</a></li>
             </ol>
         </nav>
@@ -64,9 +64,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -93,9 +93,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -122,9 +122,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -151,9 +151,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -180,9 +180,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -209,9 +209,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -238,9 +238,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -267,9 +267,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -296,9 +296,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -325,9 +325,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -354,9 +354,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -383,9 +383,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -412,9 +412,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -441,9 +441,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -470,9 +470,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -499,9 +499,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="./source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -556,9 +556,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -585,9 +585,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod6.png" alt="">
+                            <img src="./source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -614,9 +614,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod7.png" alt="">
+                            <img src="./source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -643,9 +643,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod8.png" alt="">
+                            <img src="./source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -677,9 +677,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -706,9 +706,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod6.png" alt="">
+                            <img src="./source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -735,9 +735,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod7.png" alt="">
+                            <img src="./source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -764,9 +764,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod8.png" alt="">
+                            <img src="./source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -857,7 +857,6 @@
         </div>
     </main>
     <div id="footer"></div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <script src="/www/js/ProdList.js"></script>
+    <script src="./js/prodList.js"></script>
 </body>
 </html>
