--- a/html/cartEmpty.html
+++ b/html/cartEmpty.html
@@ -8,157 +8,23 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/Cart.css">
+    <link rel="stylesheet" href="./css/cart.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <main id="main" class="justify-content-around">
-        <div class="cart-sum-wrapper d-flex flex-row justify-content-between">
-            <div class="cart-list-wrapper d-flex flex-column flex-fill">
-                <div class="list-header d-flex flex-column">
-                    <h2 class="header">Корзина</h2>
-                    <div class="duties-notice d-flex justify-content-end">
-                        Пошлины включены в цену
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                            <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
-                        </svg>
-                    </div>
-                </div>
-                <div class="list-wrapper flex-fill">
-                    <div class="cart-item d-flex flex-row">
-                        <img src="/www/source/img/prod1.png" alt="">
-                        <div class="purchase-info d-flex flex-row flex-fill justify-content-between">
-                            <div class="short-info">
-                                <p class="season">Новый сезон</p>
-                                <p class="brand">Бренд</p>
-                                <p class="description">описание товара</p>
-                            </div>
-                            <div class="cost-info">
-                                <p class="cost">Цена &#x20bd;</p>
-                                <p class="duties">Пошлины включены</p>
-                            </div>
-                            <div class="size-quanity-wrapper">
-                                <div class="size">
-                                    <p class="header">Размер</p>
-                                    <p class="value">M <a href="">Изменить</a></p>
-                                </div>
-                                <div class="quanity">
-                                    <p class="header">Количество</p>
-                                    <p class="value">1 <a href="">Изменить</a></p>
-                                </div>
-                                <div class="added-to-favourite d-flex flex-row">
-                                    <div class="favourite" title="Добавить в избранное">
-                                        <input class="checkbox" type="checkbox" id="cartItem1" checked>
-                                        <label class="icon d-flex flex-row" for="cartItem1">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                                            </svg>
-                                        </label>
-                                    </div>
-                                    Добавлено в избранное
-                                </div>
-                            </div>
-                            <button class="btn-close" type="button" id="cartItem1" title="Удалить покупку"></button>
-                        </div>
-                    </div>
-                    <div class="cart-item d-flex flex-row">
-                        <img src="/www/source/img/prod1.png" alt="">
-                        <div class="purchase-info d-flex flex-row flex-fill justify-content-between">
-                            <div class="short-info">
-                                <p class="season">Новый сезон</p>
-                                <p class="brand">Бренд</p>
-                                <p class="description">описание товара</p>
-                            </div>
-                            <div class="cost-info">
-                                <p class="cost">Цена &#x20bd;</p>
-                                <p class="duties">Пошлины включены</p>
-                            </div>
-                            <div class="size-quanity-wrapper">
-                                <div class="size">
-                                    <p class="header">Размер</p>
-                                    <p class="value">M <a href="">Изменить</a></p>
-                                </div>
-                                <div class="quanity">
-                                    <p class="header">Количество</p>
-                                    <p class="value">1 <a href="">Изменить</a></p>
-                                </div>
-                                <div class="added-to-favourite d-flex flex-row">
-                                    <div class="favourite" title="Добавить в избранное">
-                                        <input class="checkbox" type="checkbox" id="cartItem2" checked>
-                                        <label class="icon d-flex flex-row" for="cartItem2">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                                            </svg>
-                                        </label>
-                                    </div>
-                                    Добавлено в избранное
-                                </div>
-                            </div>
-                            <button class="btn-close" type="button" id="cartItem1" title="Удалить покупку"></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="purch-sum-wrapper">
-                <a href="">Продолжить покупки</a>
-                <div class="purch-sum">
-                    <h3 class="header">Сумма заказа</h3>
-                    <div class="purchases d-flex justify-content-between">
-                        <p class="text">Товары</p>
-                        <p class="cost">Цена &#x20bd;</p>
-                    </div>
-                    <div class="delivery d-flex justify-content-between">
-                        <p class="text">Доставка</p>
-                        <p class="cost">Цена &#x20bd;</p>
-                    </div>
-                    <hr>
-                    <div class="summary d-flex justify-content-between">
-                        <p class="text">Итого</p>
-                        <p class="cost">Цена &#x20bd;</p>
-                    </div>
-                </div>
-                <button class="btn-prmr" type="submit">Перейти к оплате</button>
-            </div>
-        </div>
-        <div class="question-topics-wrapper d-flex flex-row justify-content-around">
-            <div class="return-topic topic d-flex flex-column">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 -960 960 960" fill="currentColor">
-                        <path d="M280-200v-80h284q63 0 109.5-40T720-420q0-60-46.5-100T564-560H312l104 104-56 56-200-200 200-200 56 56-104 104h252q97 0 166.5 63T800-420q0 94-69.5 157T564-200H280Z"/>
-                    </svg>
-                </div>
-                <div class="text">
-                    <p class="topic-header">Бесплатный возврат в течение 30 дней</p>
-                    <p class="topic-description">У вас будет больше времени на принятие решения и никаких дополнительных расходов</p>
-                </div>
-            </div>
-            <div class="loyalty-topic topic d-flex flex-column">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-gift" viewBox="0 0 16 16">
-                        <path d="M3 2.5a2.5 2.5 0 0 1 5 0 2.5 2.5 0 0 1 5 0v.006c0 .07 0 .27-.038.494H15a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 14.5V7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h2.038A3 3 0 0 1 3 2.506zm1.068.5H7v-.5a1.5 1.5 0 1 0-3 0c0 .085.002.274.045.43zM9 3h2.932l.023-.07c.043-.156.045-.345.045-.43a1.5 1.5 0 0 0-3 0zM1 4v2h6V4zm8 0v2h6V4zm5 3H9v8h4.5a.5.5 0 0 0 .5-.5zm-7 8V7H2v7.5a.5.5 0 0 0 .5.5z"/>
-                      </svg>
-                </div>
-                <div class="text">
-                    <p class="topic-header">Программа лояльности</p>
-                    <p class="topic-description">Каждый заказ делает вас на шаг ближе к новому статусу</p>
-                </div>
-            </div>
-            <div class="delivery-topic topic d-flex flex-column">
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 -960 960 960" width="24px" fill="currentColor">
-                        <path d="M280-160q-50 0-85-35t-35-85H60l18-80h113q17-19 40-29.5t49-10.5q26 0 49 10.5t40 29.5h167l84-360H182l4-17q6-28 27.5-45.5T264-800h456l-37 160h117l120 160-40 200h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85H400q0 50-35 85t-85 35Zm357-280h193l4-21-74-99h-95l-28 120Zm-19-273 2-7-84 360 2-7 34-146 46-200ZM20-427l20-80h220l-20 80H20Zm80-146 20-80h260l-20 80H100Zm180 333q17 0 28.5-11.5T320-280q0-17-11.5-28.5T280-320q-17 0-28.5 11.5T240-280q0 17 11.5 28.5T280-240Zm400 0q17 0 28.5-11.5T720-280q0-17-11.5-28.5T680-320q-17 0-28.5 11.5T640-280q0 17 11.5 28.5T680-240Z"/>
-                    </svg>
-                </div>
-                <div class="text">
-                    <p class="topic-header">Быстрая доставка</p>
-                    <p class="topic-description">Из бутика - до вашей двери.</p>
-                </div>
+        <div class="cart-list-wrapper">
+            <h2 class="list-header">Корзина</h2>
+            <div class="empty-cartlist">
+                <p>Сейчас в корзине ничего нет.</p>
+                <a href="prodList.html">
+                    <button class="btn-prmr" type="button">Женские коллекции</button>
+                </a>
             </div>
         </div>
         <div class="favourite-list cards-list-wrapper">
@@ -174,9 +40,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -196,16 +62,16 @@
                 </div>
                 <div class="card">
                     <div class="favourite" title="Добавить в избранное">
-                        <input class="checkbox" type="checkbox" id="prodFav2" checked>
-                        <label class="icon d-flex flex-row" for="prodFav2">
+                        <input class="checkbox" type="checkbox" id="prodFav1" checked>
+                        <label class="icon d-flex flex-row" for="prodFav1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                 <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -225,16 +91,16 @@
                 </div>
                 <div class="card">
                     <div class="favourite" title="Добавить в избранное">
-                        <input class="checkbox" type="checkbox" id="prodFav3" checked>
-                        <label class="icon d-flex flex-row" for="prodFav3">
+                        <input class="checkbox" type="checkbox" id="prodFav1" checked>
+                        <label class="icon d-flex flex-row" for="prodFav1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                 <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -266,9 +132,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -295,9 +161,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod6.png" alt="">
+                            <img src="./source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -324,9 +190,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod7.png" alt="">
+                            <img src="./source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -353,9 +219,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod8.png" alt="">
+                            <img src="./source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -387,9 +253,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -416,9 +282,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod6.png" alt="">
+                            <img src="./source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -445,9 +311,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod7.png" alt="">
+                            <img src="./source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -474,9 +340,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod8.png" alt="">
+                            <img src="./source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -500,6 +366,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/www/js/Cart.js"></script>
+    <script src="./js/Cart.js"></script>
 </body>
 </html>
