--- a/html/favourites.html
+++ b/html/favourites.html
@@ -12,7 +12,7 @@
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -29,9 +29,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod1.png" alt="">
+                            <img src="./source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -71,9 +71,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod1.png" alt="">
+                            <img src="./source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -113,9 +113,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod1.png" alt="">
+                            <img src="./source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -155,9 +155,9 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/prod1.png" alt="">
+                            <img src="./source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -193,6 +193,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/www/js/Favourites.js"></script>
+    <script src="./js/Favourites.js"></script>
 </body>
 </html>
