--- a/html/favouritesEmpty.html
+++ b/html/favouritesEmpty.html
@@ -12,7 +12,7 @@
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -29,6 +29,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/www/js/Favourites.js"></script>
+    <script src="./js/favourites.js"></script>
 </body>
 </html>
