--- a/html/index.html
+++ b/html/index.html
@@ -8,35 +8,41 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/Index.css">
-    <link rel="stylesheet" href="/www/css/_utilities.css">
+    <link rel="stylesheet" href="./css/_utilities.css">
+    <link rel="stylesheet" href="./css/Index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
-    <div id="main" class="justify-content-around">
+    <main id="main" class="justify-content-around">
         <nav class="pointer " aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="IndexForHim.html">Главная</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
               <li class="breadcrumb-item"><a href="">New-In</a></li>
             </ol>
         </nav>
         <div class="cards-list-wrapper">
             <h2>NEW IN</h2>
-            <div class="sort-direction d-flex justify-content-end">
-                <div class="sort-text d-flex flex-wrap align-content-center">
-                    Сортировка
-                </div>
-                <div class="icon-wrapper">
-                    <object data="/www/source/icon/chevron-down-svgrepo-com.svg" type="image/svg+xml" width="24px" height="24px"></object>
+            <div class="filter-sort-group d-flex justify-content-end">
+                <div class="sort-direction btn-group d-flex justify-content-end">
+                    <button class="sort-btn dropdown-toggle" type="button" id="sort-dropdown" 
+                        data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
+                        Сортировка
+                    </button>
+                    <ul class="sort-dropdown dropdown-menu dropdown-menu-end" aria-labelledby="sort-dropdown">
+                        <li><a class="dropdown-item active" href="">Выбор стилистов</a></li>
+                        <li><a class="dropdown-item" href="">Новинки</a></li>
+                        <li><a class="dropdown-item" href="">По убыванию цены</a></li>
+                        <li><a class="dropdown-item" href="">По возрастанию цены</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
-                <div class="card">
+                <div class="card" title="топ с вырезом халтер">
                     <div class="favourite" title="Добавить в избранное">
                         <input class="checkbox" type="checkbox" id="prod1">
                         <label class="icon d-flex flex-row" for="prod1">
@@ -45,22 +51,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod1.png" alt="">
+                            <img src="./source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                FENDI
+                                Prada
                             </div>
                             <div class="description">
-                                Куртка с D-образной пряжкой
+                                топ с вырезом халтер
                             </div>
                             <div class="cost">
-                                30 000 &#x20bd;
+                                20 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -74,22 +80,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod2.png" alt="">
+                            <img src="./source/img/prod2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                GUCCI
+                                TOM FORD
                             </div>
                             <div class="description">
-                                Дорожная сумка среднего размера
+                                клатч с тиснением под кожу крокодила
                             </div>
                             <div class="cost">
-                                10 000 &#x20bd;
+                                15 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -103,19 +109,19 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod3.png" alt="">
+                            <img src="./source/img/prod3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                LEMAIRE
+                                Prada
                             </div>
                             <div class="description">
-                                брюки Twisted
+                                замшевая юбка миди
                             </div>
                             <div class="cost">
                                 25 000 &#x20bd;
@@ -132,22 +138,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod4.png" alt="">
+                            <img src="./source/img/prod4.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Givenchy
+                                Saint Laurent
                             </div>
                             <div class="description">
-                                ботинки Bogs
+                                туфли д'Орсе
                             </div>
                             <div class="cost">
-                                6 000 &#x20bd;
+                                10 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -175,17 +181,17 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/www/source/img/forHim/image1.png" alt="">
+                <img src="./source/img/image5.png" alt="">
             </div>
         </div>
         <div class="accessories-presentation-wrapper d-flex flex-row">
             <div class="accessories-presentation d-flex flex-column">
-                <img src="/www/source/img/forHim/image2.png" alt="">
-                <h2>Яркие рубашки</h2>
-                <p>Праздничные модели от Casablanka</p>
+                <img src="./source/img/image6.png" alt="">
+                <h2>Аксессуары для вечеринки</h2>
+                <p>Оцените праздничные туфли и сумки от Prada и других брендов.</p>
             </div>
         </div>
-        <div  class="cards-list-wrapper">
+        <div class="cards-list-wrapper">
             <h3>Прозрачные ткани</h3>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card">
@@ -197,22 +203,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod5.png" alt="">
+                            <img src="./source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Valentino Garavani
+                                Simone Rocha
                             </div>
                             <div class="description">
-                                джемпер
+                                платье миди Creature
                             </div>
                             <div class="cost">
-                                5 000 &#x20bd;
+                                20 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -226,22 +232,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod6.png" alt="">
+                            <img src="./source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Valentino Garavani
+                                Mugler
                             </div>
                             <div class="description">
-                                рубашка
+                                мюли Fang 20
                             </div>
                             <div class="cost">
-                                10 000 &#x20bd;
+                                15 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -255,22 +261,22 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod7.png" alt="">
+                            <img src="./source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Valentino Garavani
+                                Oroenza Schouler
                             </div>
                             <div class="description">
-                                брюки
+                                пальто Finch
                             </div>
                             <div class="cost">
-                                15 000 &#x20bd;
+                                45 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -284,58 +290,58 @@
                             </svg>
                         </label>
                     </div>
-                    <a href="Product.html">
+                    <a href="product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/www/source/img/forHim/prod8.png" alt="">
+                            <img src="./source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Valentino Garavani
+                                Docle & Gabana
                             </div>
                             <div class="description">
-                                лоферы
+                                сетчатая юбка-карандаш
                             </div>
                             <div class="cost">
-                                25 000 &#x20bd;
+                                20 000 &#x20bd;
                             </div>
                         </div>
                     </a>
                 </div>
-            </div>    
+            </div>
         </div>
         <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
             <div class="topic-card">
                 <a href="">
-                    <img src="/www/source/img/forHim/topicImage1.png" alt="">
-                    <p>Новинки PRADA</p>
+                    <img src="./source/img/topicImage1.png" alt="">
+                    <p>Лучшие пальто</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/www/source/img/forHim/topicImage2.png" alt="">
-                    <p>Лучшее от JACQUEMUS</p>
+                    <img src="./source/img/topicImage2.png" alt="">
+                    <p>Новые сумки</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/www/source/img/forHim/topicImage3.png" alt="">
-                    <p>Свитера и трикотаж</p>
+                    <img src="./source/img/topicImage3.png" alt="">
+                    <p>Главное от prada</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/www/source/img/forHim/topicImage4.png" alt="">
-                    <p>Зимние пальто</p>
+                    <img src="./source/img/topicImage4.png" alt="">
+                    <p>Стильные сапоги</p>
                 </a>
             </div>
         </div>
         <div id="questions-section"></div>
         <div id="subscribe-section"></div>
-    </div>
+    </main>
     <div id="footer"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
