--- a/html/product.html
+++ b/html/product.html
@@ -8,23 +8,23 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/www/css/Product.css">
+    <link rel="stylesheet" href="./css/product.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/www/js/preload.js"></script>
+    <script src="./js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
     <div id="main">
         <div class="imgs-short-name-wrapper d-flex flex-row">
             <button type="button" class="imgs d-flex flex-wrap justify-content-between" title="Развернуть изображение" data-bs-toggle="modal" data-bs-target="#imgsModal">
-                <img src="/www/source/img/product/prodImg1.png" alt="">
-                <img src="/www/source/img/product/prodImg2.png" alt="">
-                <img src="/www/source/img/product/prodImg3.png" alt="">
-                <img src="/www/source/img/product/prodImg4.png" alt="">
-                <img src="/www/source/img/product/prodImg5.png" alt="">
+                <img src="./source/img/product/prodImg1.png" alt="">
+                <img src="./source/img/product/prodImg2.png" alt="">
+                <img src="./source/img/product/prodImg3.png" alt="">
+                <img src="./source/img/product/prodImg4.png" alt="">
+                <img src="./source/img/product/prodImg5.png" alt="">
             </button>
             <div class="short-name-wrapper flex-fill justify-content-center">
                 <div class="prod-name">
@@ -64,7 +64,7 @@
         </div>
         <nav class="pointer " aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="Index.html">Для Нее</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Для Нее</a></li>
               <li class="breadcrumb-item"><a href="">Prada</a></li>
               <li class="breadcrumb-item"><a href="">Одежда</a></li>
               <li class="breadcrumb-item"><a href="">Юбки A-силуэта</a></li>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <img class="main-img" src="/www/source/img/product/prodImg3.png" alt="">
+            <img class="main-img" src="./source/img/product/prodImg3.png" alt="">
         </div>
         <div class="modal fade" id="imgsModal" tabindex="-1" aria-labelledby="imgsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-xl">
@@ -129,19 +129,19 @@
                             </div>
                             <div class="carousel-inner">
                               <div class="carousel-item justify-content-center active">
-                                <img src="/www/source/img/product/prodImg1.png" class="d-block" alt="...">
+                                <img src="./source/img/product/prodImg1.png" class="d-block" alt="...">
                               </div>
                               <div class="carousel-item justify-content-center">
-                                <img src="/www/source/img/product/prodImg2.png" class="d-block" alt="...">
+                                <img src="./source/img/product/prodImg2.png" class="d-block" alt="...">
                               </div>
                               <div class="carousel-item justify-content-center">
-                                <img src="/www/source/img/product/prodImg3.png" class="d-block" alt="...">
+                                <img src="./source/img/product/prodImg3.png" class="d-block" alt="...">
                               </div>
                               <div class="carousel-item justify-content-center">
-                                <img src="/www/source/img/product/prodImg4.png" class="d-block" alt="...">
+                                <img src="./source/img/product/prodImg4.png" class="d-block" alt="...">
                               </div>
                               <div class="carousel-item justify-content-center">
-                                <img src="/www/source/img/product/prodImg5.png" class="d-block" alt="...">
+                                <img src="./source/img/product/prodImg5.png" class="d-block" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide="prev">
